--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,13 @@
-<p id="notice"><%= notice %></p>
+<p><%= notice %></p>
 
 <h1>Posts</h1>
 
 <table>
   <thead>
     <tr>
-      <th class="green">Name</th>
-      <th>Title</th>
-      <th class="green">Author</th>
+      <th class="green" style="font-size:36px;">Name</th>
+      <th class="green" style="font-size:36px;">Title</th>
+      <th class="green" style="font-size:36px;">Author</th>
       <th colspan="3"></th>
     </tr>
   </thead>
